--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ stages:
   - lint
   - tests
 before_script:
-  - pip install poetry==1.2.0
+  - export PYTHON_KEYRING_BACKEND=keyring.backends.null.Keyring
+  - pip install poetry==1.4.2
   - poetry config experimental.system-git-client true
   - poetry install
 
@@ -25,7 +26,7 @@ run_tests:
   stage: tests
   coverage: '/^TOTAL.*\s+(\d+\%)$/'
   before_script:
-    - pip install poetry==1.2.0
+    - pip install poetry==1.4.2
     - poetry config experimental.system-git-client true
     - poetry install
   script:
