--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,9 +15,7 @@ repos:
     rev: v4.4.0
     hooks:
       - id: trailing-whitespace
-        exclude: ^tests/.*\.tex$
       - id: end-of-file-fixer
-        exclude: ^tests/.*\.tex$
       - id: check-yaml
 
   - repo: https://github.com/asottile/yesqa
@@ -50,18 +48,18 @@ repos:
       - id: python-check-blanket-type-ignore
 
   - repo: https://github.com/myint/docformatter
-    rev: v1.6.0.rc1
+    rev: v1.5.1
     hooks:
       - id: docformatter
         args: [ "--in-place", "--wrap-summaries", "100" ]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.11.4
+    rev: 5.12.0
     hooks:
       - id: isort
 
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 23.1.0
     hooks:
       - id: black
 
